--- a/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_avances_ege_excel.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_avances_ege_excel.jrxml
@@ -226,14 +226,14 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[Coord_X]]></text>
 			</staticText>
 			<staticText>
-				<reportElement stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="22" height="44" forecolor="#FFFFFF" backcolor="#E47439" uuid="be65544d-66e0-4a88-b8f5-4979d262e710"/>
+				<reportElement stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="20" height="44" forecolor="#FFFFFF" backcolor="#E47439" uuid="be65544d-66e0-4a88-b8f5-4979d262e710"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -241,8 +241,8 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph lineSpacing="Single" leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[CE]]></text>
@@ -256,7 +256,7 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -285,7 +285,7 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -300,7 +300,7 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -315,7 +315,7 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -330,7 +330,7 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -345,7 +345,7 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -374,8 +374,8 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[ID_UE]]></text>
@@ -501,8 +501,8 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[Coord_Y]]></text>
@@ -516,7 +516,7 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -531,8 +531,8 @@ end CE, tramo_control, id_ue, e08, e09, e23, cve_ent,cve_mun, cve_loc, cve_ageb,
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[TRAMO
