--- a/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba_ege.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba_ege.jrxml
@@ -256,14 +256,14 @@ where pre.punteo_sare=1 and inm.id_ue is not null and ST_sare in ('10','20') $P!
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[ESTATUS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="22" height="44" forecolor="#FFFFFF" backcolor="#E47439" uuid="be65544d-66e0-4a88-b8f5-4979d262e710"/>
+				<reportElement stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="20" height="44" forecolor="#FFFFFF" backcolor="#E47439" uuid="be65544d-66e0-4a88-b8f5-4979d262e710"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -271,8 +271,8 @@ where pre.punteo_sare=1 and inm.id_ue is not null and ST_sare in ('10','20') $P!
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph lineSpacing="Single" leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[CE]]></text>
@@ -286,8 +286,8 @@ where pre.punteo_sare=1 and inm.id_ue is not null and ST_sare in ('10','20') $P!
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[TRAMO
@@ -303,7 +303,7 @@ CONTROL	]]></text>
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -318,7 +318,7 @@ CONTROL	]]></text>
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -333,7 +333,7 @@ CONTROL	]]></text>
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -422,7 +422,7 @@ CONTROL	]]></text>
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
@@ -451,8 +451,8 @@ CONTROL	]]></text>
 					<bottomPen lineWidth="0.5" lineColor="#000000"/>
 					<rightPen lineWidth="0.5" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="false"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="7" isBold="true"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
 				<text><![CDATA[ID_UE]]></text>
