--- a/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_prueba.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_prueba.jrxml
@@ -296,7 +296,7 @@ SELECT 0 ce, 'NAC' cestatal, 1 orden,
 			join ce2019_masrencal.tr_etq_val ue on ue.id_ue=pre.id_ue 
 			left join ce2019_masrencal.tc_st_sare st on st.status_sare=pre.status_sare 
 			JOIN ce2019_masrencal.TC_LOCALIDADES locs ON ue.e03=locs.CVE_ENT AND ue.e04=locs.CVE_MUN AND ue.e05=locs.CVE_LOC 
-			where /*st_sare='10' and */ pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and inm.id_ue is not null
+			where /*st_sare='10' and */ pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and pre.id_ue is not null
 
 union all
 SELECT ue.ce, CASE
@@ -357,7 +357,7 @@ end cestatal, 2 orden,
 			join ce2019_masrencal.tr_etq_val ue on ue.id_ue=pre.id_ue 
 			left join ce2019_masrencal.tc_st_sare st on st.status_sare=pre.status_sare 
 			JOIN ce2019_masrencal.TC_LOCALIDADES locs ON ue.e03=locs.CVE_ENT AND ue.e04=locs.CVE_MUN AND ue.e05=locs.CVE_LOC 
-			where /*st_sare='10' and */ pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and inm.id_ue is not null $P!{where1}
+			where /*st_sare='10' and */ pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and pre.id_ue is not null $P!{where1}
 
             GROUP BY ue.ce
 ) dd order by ce]]>
@@ -473,7 +473,7 @@ SELECT 0 ce, 'NAC' cestatal, 1 orden,
 			join ce2019_masrencal.tr_etq_val ue on ue.id_ue=pre.id_ue 
 			left join ce2019_masrencal.tc_st_sare st on st.status_sare=pre.status_sare 
 			JOIN ce2019_masrencal.TC_LOCALIDADES locs ON ue.e03=locs.CVE_ENT AND ue.e04=locs.CVE_MUN AND ue.e05=locs.CVE_LOC 
-			where /*st_sare='10' and */ pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and inm.id_ue is not null
+			where /*st_sare='10' and */ pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and pre.id_ue is not null
 
 union all
 SELECT ue.ce, CASE
@@ -534,7 +534,7 @@ end cestatal, 2 orden,
 			join ce2019_masrencal.tr_etq_val ue on ue.id_ue=pre.id_ue 
 			left join ce2019_masrencal.tc_st_sare st on st.status_sare=pre.status_sare 
 			JOIN ce2019_masrencal.TC_LOCALIDADES locs ON ue.e03=locs.CVE_ENT AND ue.e04=locs.CVE_MUN AND ue.e05=locs.CVE_LOC 
-			where /*st_sare='10' and */ pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and inm.id_ue is not null
+			where /*st_sare='10' and */ pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and pre.id_ue is not null
 
             GROUP BY ue.ce
 ) dd where ROWNUM <2 order by ce]]>
@@ -572,11 +572,11 @@ end cestatal, 2 orden,
 				<text><![CDATA[Reporte de Avance de Registros Punteados]]></text>
 			</staticText>
 			<image>
-				<reportElement x="19" y="15" width="143" height="34" uuid="7d0317a6-ce06-40ba-9258-e201768cc914"/>
+				<reportElement x="14" y="18" width="143" height="34" uuid="da0b9553-f3ad-4e45-953b-0522fe22bc77"/>
 				<imageExpression><![CDATA[$P{URL}+"/INEGI.png"]]></imageExpression>
 			</image>
 			<image scaleImage="RetainShape">
-				<reportElement x="601" y="8" width="140" height="47" uuid="ace20206-a3d4-406e-8b5d-e242bc59a26b"/>
+				<reportElement x="580" y="5" width="140" height="47" uuid="d2024262-0ab7-4c0e-ad9a-1da5a2c531a5"/>
 				<imageExpression><![CDATA[$P{URL}+"/Logo_CE.png"]]></imageExpression>
 			</image>
 		</band>
