--- a/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba_ege.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba_ege.jrxml
@@ -193,7 +193,7 @@ join ce2019_masrencal.tr_predios pre on pre.id_cop=po.id_cop
 join ce2019_MASRENCAL.tr_inmuebles inm on inm.id_inmueble=pre.id_inmueble
 join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
 join ce2019_MASRENCAL.tc_st_sare st on pre.status_sare=st.status_sare
-where pre.punteo_sare=1 and inm.id_ue is not null and ST_sare in ('10','20') $P!{where} 
+where pre.punteo_sare=1 and pre.id_ue is not null and ST_sare in ('10','20') $P!{where} 
  order by tramo_control,origen,e23a,clee_emp,id_ue]]>
 	</queryString>
 	<field name="ST_SARE" class="java.lang.String"/>
