--- a/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_ege_csv.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_ege_csv.jrxml
@@ -328,7 +328,7 @@ end cestatal, 2 orden,
             join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
             WHERE pre.id_ue is not null and  st_sare in ('10','20', '01')
              and pre.punteo_sare=1 $P!{where1}
-            GROUP BY po.cve_operativa
+            GROUP BY substr(po.cve_operativa,0,2)
 ) dd   order by ce]]>
 		</queryString>
 		<field name="CE" class="java.math.BigDecimal"/>
@@ -401,7 +401,7 @@ end cestatal, 2 orden,
             join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
             WHERE pre.id_ue is not null and  st_sare in ('10','20', '01')
              and pre.punteo_sare=1 $P!{where} --substr(po.cve_operativa,0,2)='01'
-            GROUP BY po.cve_operativa
+            GROUP BY substr(po.cve_operativa,0,2)
 ) dd where rownum<2  order by ce]]>
 	</queryString>
 	<field name="CE" class="java.math.BigDecimal"/>
