--- a/sare_seg/src/main/webapp/WEB-INF/resource/templates/preview.html
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/templates/preview.html
@@ -169,16 +169,16 @@
   <div class="wrap-titulo-encabezado no-first"><i class="material-icons">location_city</i>  Edificio &oacute; Centro Comercial</div>
   
   <div class="row container-campos">
-    <div class="col s6 m3 wrap-titulo-campo"> <label for="E12_pv">E12 Edificio:</label> </div>
+    <div class="col s6 m3 wrap-titulo-campo"> <label for="e12">E12 Edificio:</label> </div>
     <div class="col s6 m3 wrap-info-campo"> <span class="vistaprevia" id="E12_pv"></span> </div>  
-    <div class="col s6 m3 wrap-titulo-campo"> <label for="tipo_E19_pv">Tipo E19:</label> </div>
+    <div class="col s6 m3 wrap-titulo-campo"> <label for="tipo_E19">Tipo E19:</label> </div>
     <div class="col s6 m3 wrap-info-campo"> <span class="vistaprevia" id="tipo_E19_pv"></span> </div>
   </div>
   
   <div class="row container-campos">
-    <div class="col s6 m3 wrap-titulo-campo"> <label for="E12p_pv">E12P Piso:</label> </div>
-    <div class="col s6 m3 wrap-info-campo"> <span class="vistaprevia" id="E12p_pv"></span> </div>
-    <div class="col s6 m3 wrap-titulo-campo"> <label for="e19_pv">E19 Nombre:</label> </div>
+    <div class="col s6 m3 wrap-titulo-campo"> <label for="e12p">E12P Piso:</label> </div>
+    <div class="col s6 m3 wrap-info-campo"> <span class="vistaprevia" id="e12p_pv"></span> </div>
+    <div class="col s6 m3 wrap-titulo-campo"> <label for="tipo_E19">E19 Nombre:</label> </div>
     <div class="col s6 m3 wrap-info-campo"> <span class="vistaprevia" id="e19_pv"></span> </div>
   </div>
   
